<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".AuthActivity">

    <LinearLayout
        android:id="@+id/authLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_app"
        android:gravity="center|top"
        android:orientation="vertical"
        android:layout_marginTop="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mousememoirs"
            android:shadowColor="@color/purple"
            android:shadowDx="-10"
            android:shadowDy="14"
            android:shadowRadius="1"
            android:text="@string/log"
            android:textColor="@color/white"
            android:textSize="90sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mousememoirs"
            android:shadowColor="@color/white"
            android:shadowDx="-6"
            android:shadowDy="6"
            android:shadowRadius="1"
            android:text="@string/in"
            android:textColor="@color/purple"
            android:textSize="90sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/purple"
            android:textColorHint="@color/purple" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/purple"
            android:textColorHint="@color/purple" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp">

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/purple"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/btnLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                android:fontFamily="@font/mousememoirs"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/access"
                android:textAllCaps="true"
                android:textColor="@color/purple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnRegister"
                android:fontFamily="@font/mousememoirs"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                android:textSize="20sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/efabGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/white"
            android:text="@string/google"
            android:textColor="@color/purple"
            android:textSize="20sp"
            app:icon="@drawable/ic_google"
            app:iconTint="@color/purple" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/efabAnonymous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/white"
            android:text="@string/anonymous"
            android:textColor="@color/purple"
            android:textSize="20sp"
            app:icon="@drawable/ic_anonymous"
            app:iconTint="@color/purple" />

    </LinearLayout>

</LinearLayout>