<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".DurationMenuActivity">

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/mousememoirs"
        android:shadowColor="@color/purple"
        android:shadowDx="-10"
        android:shadowDy="14"
        android:shadowRadius="1"
        android:text="@string/duration"
        android:textColor="@color/white"
        android:textSize="90sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mousememoirs"
        android:shadowColor="@color/white"
        android:shadowDx="-6"
        android:shadowDy="6"
        android:shadowRadius="1"
        android:text="@string/game"
        android:textColor="@color/purple"
        android:textSize="90sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/duration" />

    <ImageView
        android:contentDescription="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-50dp"
        android:src="@drawable/img_gente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnShort"
        android:layout_width="220sp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/mousememoirs"
        android:text="@string/short_game"
        android:textAllCaps="true"
        android:textColor="@color/purple"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game" />

    <Button
        android:id="@+id/btnMedium"
        android:layout_width="220sp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/mousememoirs"
        android:text="@string/medium_game"
        android:textAllCaps="true"
        android:textColor="@color/purple"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnShort" />

    
    <Button
        android:id="@+id/btnLong"
        android:layout_width="220sp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/mousememoirs"
        android:text="@string/long_game"
        android:textAllCaps="true"
        android:textColor="@color/purple"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnMedium" />

    <Button
        android:id="@+id/btnPersonalized"
        android:layout_width="220sp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/mousememoirs"
        android:text="@string/personalized"
        android:textAllCaps="true"
        android:textColor="@color/purple"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLong" />

</androidx.constraintlayout.widget.ConstraintLayout>