<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/app_name_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/mousememoirs"
            android:shadowColor="@color/purple"
            android:shadowDx="-10"
            android:shadowDy="14"
            android:shadowRadius="1"
            android:text="@string/app_name_first"
            android:textColor="@color/white"
            android:textSize="90sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/app_name_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mousememoirs"
            android:shadowColor="@color/white"
            android:shadowDx="-6"
            android:shadowDy="6"
            android:shadowRadius="1"
            android:text="@string/app_name_second"
            android:textColor="@color/purple"
            android:textSize="90sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_name_first" />

        <ImageView
            android:contentDescription="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-50dp"
            android:src="@drawable/img_gente"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="220sp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/mousememoirs"
            android:text="@string/play"
            android:textAllCaps="true"
            android:textColor="@color/purple"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_name_second" />

        <Button
            android:id="@+id/btnDictionary"
            android:layout_width="220sp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/mousememoirs"
            android:text="@string/dictionary"
            android:textAllCaps="true"
            android:textColor="@color/purple"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnPlay" />

        <Button
            android:id="@+id/btnInstructions"
            android:layout_width="220sp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/mousememoirs"
            android:text="@string/instructions"
            android:textAllCaps="true"
            android:textColor="@color/purple"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnDictionary" />

        <Button
            android:id="@+id/btnOut"
            android:layout_width="220sp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/mousememoirs"
            android:text="@string/sign_out"
            android:textAllCaps="true"
            android:textColor="@color/purple"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnInstructions" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="32dp"
        android:src="@drawable/ic_time"
        app:backgroundTint="@color/purple"
        app:fabSize="normal"
        app:tint="@color/white" />

</FrameLayout>