<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".InstructionsActivity">

    <TextView
        android:id="@+id/instructionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/mousememoirs"
        android:shadowColor="@color/purple"
        android:shadowDx="-10"
        android:shadowDy="14"
        android:shadowRadius="1"
        android:text="@string/instructions"
        android:textColor="@color/white"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/cvStartEx1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/cvEndEx1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionsTitle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mousememoirs"
            android:shadowColor="@color/purple"
            android:shadowDx="-4"
            android:shadowDy="7"
            android:shadowRadius="1"
            android:text="@string/instructions_1"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cvEndEx1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/cvStartEx1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cvStartEx1"
        app:layout_constraintTop_toTopOf="@+id/cvStartEx1">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/description"
            android:src="@drawable/example1" />

    </LinearLayout>

    <TextView
        android:id="@+id/cvEndEx2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="32dp"
        android:fontFamily="@font/mousememoirs"
        android:shadowColor="@color/purple"
        android:shadowDx="-4"
        android:shadowDy="7"
        android:shadowRadius="1"
        android:text="@string/instructions_2"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvStartEx1" />

    <LinearLayout
        android:id="@+id/cvStartEx3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/cvEndEx3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvEndEx2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mousememoirs"
            android:shadowColor="@color/purple"
            android:shadowDx="-4"
            android:shadowDy="7"
            android:shadowRadius="1"
            android:text="@string/instructions_3"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cvEndEx3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/cvStartEx3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cvStartEx3"
        app:layout_constraintTop_toTopOf="@+id/cvStartEx3">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/description"
            android:src="@drawable/example2" />

    </LinearLayout>

    <TextView
        android:id="@+id/cvEndEx4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="32dp"
        android:fontFamily="@font/mousememoirs"
        android:shadowColor="@color/purple"
        android:shadowDx="-4"
        android:shadowDy="7"
        android:shadowRadius="1"
        android:text="@string/instructions_4"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvStartEx3" />


</androidx.constraintlayout.widget.ConstraintLayout>