<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="340dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/background_app"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mousememoirs"
                android:shadowColor="@color/purple"
                android:shadowDx="-5"
                android:shadowDy="7"
                android:shadowRadius="1"
                android:text="@string/exit_confirmation"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnExitYes"
                    android:layout_width="90sp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/mousememoirs"
                    android:text="@string/exit_confirmationyes"
                    android:textAllCaps="true"
                    android:textColor="@color/purple"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnExitNo"
                    android:layout_width="90sp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/mousememoirs"
                    android:text="@string/exit_confirmationno"
                    android:textAllCaps="true"
                    android:textColor="@color/purple"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>